@@ -1,3 +1,9 @@
+2002-09-04  Theodore A. Roth  <troth@verinet.com>
+
+	* configure.in(AM_INIT_AUTOMAKE): Bump version.
+	* doc/TODO: Add note about __ prefix of args in dox.
+	* include/setjmp.h: Add dox comments.
+
 2002-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* doc/api/Makefile.am: implement --enable-versioned-doc
